--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>cms structure</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
 	
 	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -14,6 +13,8 @@
 <body>
 
 <div class="content">
+
+    <p>github test</p>
 
 </div>
 
